fix collapse toggle

--- a/my-riddles.css
+++ b/my-riddles.css
@@ -347,6 +347,10 @@ move log out link under account instead of support. */
   border-radius: .6rem !important;
 }
 
+.card-col .card-text {
+  min-height: 6.3rem;
+}
+
 
 
 
@@ -378,6 +382,17 @@ move log out link under account instead of support. */
 }
 
 .side-panel .collapse-toggle {
+  color: inherit !important;
+  display: flex !important;
+  justify-content: space-between !important;
+  padding: 1.2rem 4.8rem 1.2rem 1.6rem !important;
+}
+
+.count-tag {
+  margin: -.4rem 0;
+}
+
+.side-panel .collapse-toggle {
   border-radius: 0 !important;
 }
 
@@ -387,6 +402,10 @@ move log out link under account instead of support. */
   height: 7.2rem !important;
   position: relative !important;
   z-index: 2 !important;
+}
+
+.creator-top-bar .back-link {
+  color: #272A31 !important;
 }
 
 .modal-header .creator-top-bar {
@@ -724,6 +743,10 @@ move log out link under account instead of support. */
   padding: 2.4rem !important;
 }
 
+.modal-footer {
+  padding: 0 2.4rem 2.4rem !important;
+}
+
 .k-input,
 .k-picker,
 .k-colorgradient,
@@ -745,10 +768,77 @@ move log out link under account instead of support. */
   width:  3.6rem !important;
 }
 
+
+
+
+
+/* MEDIA UPLOADER
+*/
+.media-categories {
+  margin-bottom: .2rem !important;
+  width: 100% !important;
+}
+
+.media-types,
+.media-categories {
+  background: #272A31 !important;
+  border-radius: .8rem;
+  gap: .4rem !important;
+  justify-content: center !important;
+  padding: .4rem !important;
+}
+
+.media-categories {
+  border-radius: .8rem .8rem 0 0;
+}
+
+.media-types {
+  background: #484F5F !important;
+  border-radius: 0 0 .8rem .8rem;
+}
+
+.media-types .nav-link,
+.media-categories .creator-steps-tab {
+  background: rgba(255,255,255,.1) !important;
+  border-radius: .6rem !important;
+  color: #fff !important;
+  font-size: 1.2rem !important;
+  font-weight: 700 !important;
+  height: 3.6rem !important;
+  letter-spacing: .14em !important;
+  text-transform: uppercase !important;
+}
+
+.media-categories .creator-steps-tab {
+  line-height: 3.6rem !important;
+}
+
+.media-categories .creator-steps-tab:before {
+  display: none !important;
+}
+
+.media-categories .creator-steps-tab.active, 
+.media-categories .creator-steps-tab:focus, 
+.media-categories .creator-steps-tab:hover,
+.media-types .nav-link.active,
+.media-types .nav-link:focus,
+.media-types .nav-link:hover {
+  background: #19d2f1 !important;
+  color: #fff !important;
+}
+
+.media-types .nav-link .icon {
+  height: 1.8rem !important;
+  width: 1.8rem !important;
+}
+
+
+
+
+
 /* RICH TEXT EDITOR
 i screwed up the smooth transition on the focus state. i tried my best to get it working but failed.
 */
-
 .rich-text-editor .toolbar {
   border-radius: 0 0 .5rem .5rem !important;
   margin-top: 0 !important;
@@ -911,6 +1001,10 @@ i screwed up the smooth transition on the focus state. i tried my best to get it
   top: 1rem !important;
 }
 
+.branches-editor .white-box.error {
+  font-family: inherit !important;
+}
+
 
 
 
@@ -973,3 +1067,5 @@ i screwed up the smooth transition on the focus state. i tried my best to get it
 /*OTHER NOTES
 
 - remove svg filter on the "more" options in the text editor (url(#filter-1)). it makes the icons look blurry.
+- change tooltip font to articulat
+- change tooltip bg color to rgba(39,42,49,.8)
